CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_WTLST__c.object
<CustomObject>
    <description>Case Waitlist</description>
    <fields>
        <fullName>Additional_Care_Needs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Care Needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_REASON_REMOVAL__c</fullName>
        <description>Reason for Removal</description>
        <label>Reason for Removal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00749</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_WTLST__c</fullName>
        <description>Waitlist Status</description>
        <label>Waitlist/Enrollment Freeze Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00754</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Children_Requesting_Care__c</fullName>
        <label>Number of Children Requesting Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_WTLST__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_WTLST__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPG__c</fullName>
        <label>% FPG</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Waitlist/Enrollment Freezes</relationshipLabel>
        <relationshipName>T_SBSD_CASE114</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Teen_Parents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teen Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_from_Colorado_Works_TANF_to_l__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transitional TANF Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TANF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TANF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_130_FPG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under 130% FPG</label>
        <type>Checkbox</type>
    </fields>
    <label>Waitlist/Enrollment Freeze</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_CASE__c</columns>
        <columns>DTE_BEGIN_EFFV_WTLST__c</columns>
        <columns>CDE_STATUS_WTLST__c</columns>
        <columns>CDE_REASON_REMOVAL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>IDN_CASE__c</columns>
        <columns>DTE_BEGIN_EFFV_WTLST__c</columns>
        <columns>CDE_STATUS_WTLST__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Waitlist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlists/County Freezes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>