CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_WTLST__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDN_CASE__c</columns>
    <columns>DTE_BEGIN_EFFV_WTLST__c</columns>
    <columns>CDE_STATUS_WTLST__c</columns>
    <columns>CDE_REASON_REMOVAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDN_CASE__c</field>
        <operation>equals</operation>
        <value>161020991</value>
    </filters>
    <label>All</label>
</ListView>