CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_WTLST__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>IDN_CASE__c</columns>
    <columns>DTE_BEGIN_EFFV_WTLST__c</columns>
    <columns>CDE_STATUS_WTLST__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>